--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^4.2.1",
     "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
   },
