--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.0
 Django==3.1.3
+django-cors-headers==3.5.0
+django-filter==2.4.0
+djangorestframework==3.12.1
 pytz==2020.4
 sqlparse==0.4.1
-djangorestframework==3.12.1
-django_cors_headers==3.5.0
