--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.0",
     "react-select": "^4.2.1",
     "react-simplemde-v1": "^2.0.1",
+    "reactjs-popup": "^2.0.4",
     "reactstrap": "^8.7.1",
     "simplemde": "^1.11.2",
     "web-vitals": "^0.2.4"
